[tool.poetry]
name = "libbydl"
version = "0.1.0"
description = "A tool for downloading and decrypting books from Libby"
authors = ["Marek Veselý <me@notmarek.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
requests = "^2.25.1"
colorama = "^0.4.4"
loguru = "^0.5.3"
tabulate = "^0.8.9"
lxml = "^4.9.3"
pycryptodome = "^3.10.1"
oscrypto = "^1.2.0"

[tool.poetry.scripts]
libbydl = "libbydl.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
